[package]
name = "bevy_sprite"
version = "0.6.0-pre-release.1"
edition = "2018"
description = "Provides sprite functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.6.0-pre-release.1" }
bevy_asset = { path = "../bevy_asset", version = "0.6.0-pre-release.1" }
bevy_core = { path = "../bevy_core", version = "0.6.0-pre-release.1" }
bevy_ecs = { path = "../bevy_ecs", version = "0.6.0-pre-release.1" }
bevy_log = { path = "../bevy_log", version = "0.6.0-pre-release.1" }
bevy_math = { path = "../bevy_math", version = "0.6.0-pre-release.1" }
bevy_reflect = { path = "../bevy_reflect", version = "0.6.0-pre-release.1", features = ["bevy"] }
bevy_render = { path = "../bevy_render", version = "0.6.0-pre-release.1" }
bevy_transform = { path = "../bevy_transform", version = "0.6.0-pre-release.1" }
bevy_utils = { path = "../bevy_utils", version = "0.6.0-pre-release.1" }
bevy_window = { path = "../bevy_window", version = "0.6.0-pre-release.1" }

# other
# direct dependency required for derive macro
bytemuck = { version = "1", features = ["derive"] }
rectangle-pack = "0.4"
thiserror = "1.0"
guillotiere = "0.6.0"
serde = { version = "1", features = ["derive"] }
