[package]
name = "bevy_transform"
version = "0.6.0-alpha.1"
edition = "2018"
description = "Provides hierarchy and transform functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.6.0-alpha.1" }
bevy_ecs = { path = "../bevy_ecs", version = "0.6.0-alpha.1" }
bevy_math = { path = "../bevy_math", version = "0.6.0-alpha.1" }
bevy_reflect = { path = "../bevy_reflect", version = "0.6.0-alpha.1", features = ["bevy"] }
bevy_utils = { path = "../bevy_utils", version = "0.6.0-alpha.1" }

# other
smallvec = { version = "1.6", features = ["serde", "union", "const_generics"] }
