[package]
name = "bevy_wgpu"
version = "0.6.0-pre-release.1"
edition = "2018"
description = "A wgpu render backend for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
default = ["bevy_winit"]
trace = ["wgpu/trace"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.6.0-pre-release.1" }
bevy_asset = { path = "../bevy_asset", version = "0.6.0-pre-release.1" }
bevy_core = { path = "../bevy_core", version = "0.6.0-pre-release.1" }
bevy_diagnostic = { path = "../bevy_diagnostic", version = "0.6.0-pre-release.1" }
bevy_ecs = { path = "../bevy_ecs", version = "0.6.0-pre-release.1" }
bevy_render = { path = "../bevy_render", version = "0.6.0-pre-release.1" }
bevy_window = { path = "../bevy_window", version = "0.6.0-pre-release.1" }
bevy_winit = { path = "../bevy_winit", optional = true, version = "0.6.0-pre-release.1" }
bevy_utils = { path = "../bevy_utils", version = "0.6.0-pre-release.1" }

# other
wgpu = "0.9"
futures-lite = "1.4.0"
crossbeam-channel = "0.5.0"
crossbeam-utils = "0.8.1"
parking_lot = "0.11.0"
